[package]
name = "neon-demo"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.0"
image = "0.23.14"
lazy_static = "1.4.0"
rayon = "1.5.1"
num-complex = "0.4.0"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6", "channel-api"]
